(bug 55445) Edit box is too narrow in Chameleon skin

--- a/css/screen.css
+++ b/css/screen.css
@@ -84,3 +84,7 @@ li.new a, a.new {
 .p-personal-tools {
 	margin: 0 0 0 1ex;
 }
+
+#wpTextbox1 {
+	width: 100%;
+}
